--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@hiyoko_coder" />
+    <meta property="og:url" content="https://piyopanman.vercel.app" />
+    <meta property="og:title" content="ぴよぱんまんの日報" />
+    <meta property="og:description" content="ぴよぱんまんの日報です∧( 'Θ' )∧" />
+    <meta property="og:image" content="/logo192.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>ぴよぱんまんの日報</title>
