--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://piyopanman.vercel.app" />
     <meta property="og:title" content="ぴよぱんまんの日報" />
     <meta property="og:description" content="ぴよぱんまんの日報です∧( 'Θ' )∧" />
-    <meta property="og:image" content="/logo192.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
