--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>ぴよぱんまんの日報</title>
+    <title>ぴよぱんまん</title>
   </head>
 
   <body>
