twitterカードの変更とREADMの更新

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@hiyoko_coder" />
     <meta property="og:url" content="https://piyopanman.vercel.app" />
-    <meta property="og:title" content="ぴよぱんまんの日報" />
-    <meta property="og:description" content="ぴよぱんまんの日報です∧( 'Θ' )∧" />
+    <meta property="og:title" content="ぴよぱんまん" />
+    <meta
+      property="og:description"
+      content="ぴよぱんまんのページです∧( 'Θ' )∧"
+    />
     <meta
       property="og:image"
       content="https://piyopanman.piyopanman.vercel.app/logo192.png"
