--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="ぴよぱんまん" />
     <meta
       property="og:description"
-      content="ぴよぱんまんのページです∧( 'Θ' )∧"
+      content="ぴよぱんまんのサイトです∧( 'Θ' )∧"
     />
     <meta
       property="og:image"
@@ -25,6 +25,15 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>ぴよぱんまん</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CGZ3N1BH7B"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-CGZ3N1BH7B');
+    </script>
   </head>
 
   <body>
